[project]
name = "supergluepretrainednetwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stadnik Andrii", email = "stadnikandriy1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.1.3",
    "numpy>=1.18.1",
    "opencv-python>=4.1.2.30",
    "torch>=1.1.0",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
